# vybind11

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.rst  LICENCE.txt  README.rst  pseudotest.py  vybind11-dev-requirements.yml  vybind11.pc.in  vybind11Config.cmake.in
.github/: ISSUE_TEMPLATE.md
benchmark/: CMakeLists.txt  benchmark_vybind11.cpp
docs/: Doxyfile  environment.yml
docs/source/: basic_usage.rst  compilers.rst  conf.py  examples.rst  index.rst  installation.rst
examples/: hello_world.cpp  vybind11_version.cpp
include/vybind11/: vybind11.hpp  vybind11_config.hpp
python/module/vybind11/: __init__.py
python/src/: CMakeLists.txt  main.cpp
recipe/: meta.yaml
test/: CMakeLists.txt  test_vybind11_config.cpp
